# headquarters

./: .env_example  .gitignore  DIAGRAMA_API_TRIGGER.excalidraw  Dockerfile  README.md  clean_cache.sh  compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
api/: app.py
api/agents/: main.py
api/bots/: one_bot.py
api/control/database/: database.py
api/control/models/: models.py
api/control/routers/: auth.py  teams.py  todos.py  users.py
api/control/schemas/: todos_schemas.py  users_schemas.py
api/control/security/: security.py
api/control/settings/: settings.py
tests/: conftest.py  factories.py  test_app.py  test_db.py  test_security.py  test_todos.py  test_users.py
