[tool.poetry]
name = "api_trigger"
version = "0.1.0"
description = ""
authors = ["ENOCK"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
fastapi = {extras = ["standard"], version = "^0.112.2"}
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
python-multipart = "^0.0.9"
pyjwt = "^2.9.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
msal = "^1.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.2"
httpx = "^0.27.2"
factory-boy = "^3.3.1"
freezegun = "^1.5.1"
testcontainers = "^4.8.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=api -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"